Bug 1337578 - Mark atoms when cloning functions r=bhackett